--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "webpack 学习使用，搭建脚手架",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/gaoliulin/webpack-1/issues"
   },
-  "homepage": "https://github.com/gaoliulin/webpack-1#readme"
+  "homepage": "https://github.com/gaoliulin/webpack-1#readme",
+  "dependencies": {
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
+  }
 }
