--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "test1": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config webpack.config.js",
-    "build": "npx webpack --config webpack.config.js",
-    "webpack": "webpack",
-    "start": "webpack serve --open"
+    "dev": "webpack server --config webpack.config.js",
+    "dev1": "webpack-dev-server --config webpack.config.js",
+    "start": "webpack serve --open",
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
