6. 步骤四  配置css文件，less 文件 对应loader

--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   "homepage": "https://github.com/gaoliulin/webpack-1#readme",
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
+    "less-loader": "^11.1.3",
+    "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
