--- a/package.json
+++ b/package.json
@@ -25,7 +25,14 @@
   },
   "homepage": "https://github.com/gaoliulin/webpack-1#readme",
   "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/plugin-transform-runtime": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-typescript": "^7.22.5",
+    "@babel/runtime": "^7.22.10",
+    "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
+    "core-js": "^3.32.0",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "less-loader": "^11.1.3",
