--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "html-webpack-plugin": "^5.5.3",
     "less-loader": "^11.1.3",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
