--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "less-loader": "^11.1.3",
+    "node-loader": "^2.0.0",
+    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
