--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@babel/runtime": "^7.22.10",
     "@babel/runtime-corejs3": "^7.23.2",
+    "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.32.0",
@@ -38,6 +39,9 @@
     "html-webpack-plugin": "^5.5.3",
     "less-loader": "^11.1.3",
     "node-loader": "^2.0.0",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
+    "postcss-pxtorem": "^6.0.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
