--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.32.0",
     "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "less-loader": "^11.1.3",
     "node-loader": "^2.0.0",
