--- a/package.json
+++ b/package.json
@@ -36,6 +36,13 @@
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.32.0",
     "css-loader": "^6.8.1",
+    "eslint": "^8.52.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^5.5.3",
     "less-loader": "^11.1.3",
     "node-loader": "^2.0.0",
