--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@babel/preset-typescript": "^7.22.5",
     "@babel/runtime": "^7.22.10",
     "@babel/runtime-corejs3": "^7.23.2",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
