--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^5.5.3",
     "less-loader": "^11.1.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "node-loader": "^2.0.0",
     "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
