--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.32.0",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
     "eslint": "^8.52.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.29.0",
